--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="text">#FFFFFF</color>
+    <color name="blue_01">#154F9E</color>
+    <color name="blue_02">#7BB9E7</color>
+    <color name="sunrise">#E16B14</color>
+    <color name="card_bg">#4DFFFFFF</color>
 </resources>
