--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#154f9e"
-                android:endColor="#7bb9e7"
+                android:startColor="@color/blue_01"
+                android:endColor="@color/blue_02"
                 android:type="linear"
                 android:angle="270"/>
         </shape>
