--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.WeatherForecast" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:windowDisablePreview">true</item>
+        <item name="colorPrimary">@color/blue_01</item>
+        <item name="colorSecondary">@color/blue_02</item>
     </style>
+
+    <style name="Theme.WeatherForecast" parent="Base.Theme.WeatherForecast" />
 </resources>
