--- a/app/src/main/res/layout/layout_today_forecast_header_view.xml
+++ b/app/src/main/res/layout/layout_today_forecast_header_view.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="102dp"
         tool:text="Location"
         android:textSize="32sp"
-        android:textColor="#ffff"
+        android:textColor="@color/text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
